[metadata]
name = lcgtools
version = attr: lcgtools.__version__
author = Cloudberries
author_email = lcgtools@proton.me
description = Custom card tools for Living Card Games
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lcgtools/lcg_tools
project_urls =
    Bug Tracker = https://github.com/lcgtools/lcg_tools/issues
license = GNU LGPL v3 or later
license_files =
    LICENSE
    COPYING
    COPYING.LESSER
keywords = lcgtools, lcg
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
python_requires = >=3.8, <4
install_requires =
    PySide6
include_package_data = True
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lcg_pdf = lcgtools.scripts.pdf:main
    lcg_cardlist = lcgtools.scripts.cardlist:main
    lcg_image = lcgtools.scripts.image:main
